chore: regenerate docs
